--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <title>Website Pets</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <script src="bundle.js"></script>
+    <div id="main-container" class="container"><h1>Hello!</h1></div>
   </body>
 </html>
