--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Website Pets</title>
   </head>
   <body>
-    <div id="main-container" class="container"><h1>Hello!</h1></div>
+    <div id="main-container" class="container"></div>
   </body>
 </html>
